# panekModel

./: README.md  debug_normalization_2.py  debug_yt_api.py  final_debug.py  inspect_parquet.py  pyproject.toml  requirements.txt  streamlit_app.py  videos.txt
data/debug/: 00_original.csv  01_after_phrase_removal.csv  02_after_basic_cleaning.csv  03_after_stopwords.csv
data/models/: probabilities.npy
data/models/bertopic_model/: config.json  topic_embeddings.safetensors  topics.json
data/parquet/processed/: chunks.parquet
data/parquet/raw/: metadata.parquet
data/reports/: topic_model_evaluation.csv
notebooks/: 01_e2e_example.ipynb
src/yt_topics_pro/: __init__.py  chunking.py  cli.py  config.py  embed.py  normalize.py  yt_api.py
src/yt_topics_pro/app/: dashboard.py  plots.py
src/yt_topics_pro/dashboard/: __init__.py  app.py
src/yt_topics_pro/sentiment/: aggregate.py  aspect.py  emotions.py  polarity.py
src/yt_topics_pro/storage/: duck.py  faiss_index.py  tables.py
src/yt_topics_pro/topics/: bertopic_runner.py  ctm_runner.py  evaluate.py  labeling.py  top2vec_runner.py
